--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Replit user <replituser@example.com>"]
 python = "^3.8"
 pytesseract = "^0.3.7"
 nltk = "^3.5"
+uvicorn = "^0.13.4"
+fastapi = "^0.63.0"
 
 [tool.poetry.dev-dependencies]
 
