--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pytesseract = "^0.3.7"
 nltk = "^3.5"
 uvicorn = "^0.13.4"
 fastapi = "^0.63.0"
+networkx = "^2.5"
 
 [tool.poetry.dev-dependencies]
 
